--- a/templates/dialog/add-item-dialog.html
+++ b/templates/dialog/add-item-dialog.html
@@ -13,6 +13,7 @@
       <option value="invokable">{{localize "PB.ItemTypeInvokable"}}</option>
       <option value="hat">{{localize "PB.ItemTypeHat"}}</option>
       <option value="weapon">{{localize "PB.ItemTypeWeapon"}}</option>
+      <option value="ammo">{{localize "PB.ItemTypeAmmo"}}</option>
     </select>
   </div>
 </form>
