--- a/templates/chat/mystical-mishap-card.html
+++ b/templates/chat/mystical-mishap-card.html
@@ -1,21 +1,21 @@
-<form class="roll-card">
-  <div class="card-title">{{title}}</div>
-  <div class="test-roll">
-    {{#each items as |item|}}
-    <div class="outcome-text">
-      <span class="attack-outcome"> {{item.data.text}} </span>
+<div class="outcome-text">
+  <span class="attack-outcome">{{localize "PB.MysticalMishaps"}}</span>
+</div>
+
+<div class="test-roll">
+  <div class="attack-roll">
+    {{#if formula}}
+    <div class="roll-title">
+      <span>{{formula}}</span>
     </div>
-    {{/each}}
-    <div class="attack-roll">
-      {{#if formula}}
-      <div class="roll-title">
-        <span>{{formula}}</span>
-      </div>
-      {{/if}} {{#if roll}}
-      <div class="roll-result">
-        <span>{{xtotal roll}}</span>
-      </div>
-      {{/if}}
+    {{/if}} {{#if roll}}
+    <div class="roll-result">
+      <span>{{xtotal roll}}</span>
     </div>
+    {{/if}}
   </div>
-</form>
+</div>
+
+{{#each items as |item|}}
+<div class="card-description">{{item.data.text}}</div>
+{{/each}}
