--- a/scss/pirateborg/_actor-sheet.scss
+++ b/scss/pirateborg/_actor-sheet.scss
@@ -111,6 +111,7 @@
                   font-size: 10pt;
                   border: 2px groove var(--light-border-color);
                   background: rgba(255, 255, 255, 0.2);
+                  min-width: 100px;
                 }
               }
             }
@@ -246,10 +247,9 @@
 
     input[type="text"].actor-name {
       font-family: var(--h1-font);
-      font-size: 38px;
+      font-size: 40px;
       border: none;
       height: 46px;
-      font-weight: 600;
     }
 
     .sheet-body {
