--- a/scss/pirateborg/_item-sheet.scss
+++ b/scss/pirateborg/_item-sheet.scss
@@ -20,10 +20,9 @@
           flex: 1;
           border: none;
           font-family: var(--h1-font);
-          font-size: 38px;
+          font-size: 40px;
           border: none;
           height: 46px;
-          font-weight: 600;
           margin: 0;
           padding: 0;
         }
@@ -34,10 +33,10 @@
           text-transform: uppercase;
 
           .item-type {
-            font-family: var(--h3-font);
-            font-size: 24px;
+            font-size: 20px;
             width: 100%;
             margin: 0;
+            text-transform: capitalize;
           }
         }
       }
