--- a/scss/pirateborg/_rollcards.scss
+++ b/scss/pirateborg/_rollcards.scss
@@ -11,7 +11,6 @@
     margin-bottom: 24px;
     text-align: center;
     padding-top: 4px;
-    line-height: 28px;
   }
 
   .dr-modifiers {
@@ -49,10 +48,10 @@
     font-family: var(--chat-font);
     font-size: 16px;
     text-align: center;
-    margin: 24px 0;
+    margin: 24px 0 0 0;
 
-    p:last-of-type {
-      margin-bottom: 0;
+    p:first-of-type {
+      margin: 0;
     }
   }
 
@@ -78,10 +77,14 @@
     margin-top: 24px;
     margin-bottom: 4px;
     font-style: italic;
-
+    font-weight: 600;
     p {
       margin: 0;
     }
+  }
+
+  .outcome-text + .card-description {
+    margin: 0;
   }
 
   .outcome-text:last-of-type {
