--- a/templates/chat/defend-roll-card.html
+++ b/templates/chat/defend-roll-card.html
@@ -17,7 +17,9 @@
       <span>{{xtotal defendRoll}}</span>
     </div>
   </div>
-  {{#if takeDamage}}
+  {{#if attackOutcomeDescription}}
+  <div class="card-description">{{attackOutcomeDescription}}</div>
+  {{/if}} {{#if takeDamage}}
   <div class="outcome-text">
     <span class="take-damage">{{takeDamage}}</span>
   </div>
