--- a/templates/chat/wield-roll.html
+++ b/templates/chat/wield-roll.html
@@ -8,14 +8,18 @@
     <div class="roll-result">
         <span>{{xtotal wieldRoll}}</span>
     </div>
+    {{#if wieldOutcomeText}}
+      <div class="card-description">
+        {{{wieldOutcomeText}}}
+      </div>
+    {{/if}}
 </div>
 
 {{#if buttons}}
-<div>&nbsp;</div>
 <div class="item-buttons">
     {{#each buttons}}
     <button type="button" class="button item-button rollable" {{#each data}} data-{{@key}}="{{this}}"{{/each}} title="{{localize title}}">
-    {{localize title}}
+     {{localize title}}
     </button>
     {{/each}}
 </div>
