--- a/scss/pirateborg/_foundry-overrides.scss
+++ b/scss/pirateborg/_foundry-overrides.scss
@@ -263,6 +263,10 @@ form.editable .results {
       margin-top: 20px;
       justify-content: center;
     }
+
+    .gm-only {
+      display: none;
+    }
   }
 
   .message {
