--- a/templates/chat/mystical-mishap.html
+++ b/templates/chat/mystical-mishap.html
@@ -1,21 +1,23 @@
-<div class="outcome-text">
-  <span class="attack-outcome">{{localize "PB.MysticalMishaps"}}</span>
-</div>
-
-<div class="test-roll">
-  <div class="attack-roll">
-    {{#if formula}}
-    <div class="roll-title">
-      <span>{{formula}}</span>
-    </div>
-    {{/if}} {{#if roll}}
-    <div class="roll-result">
-      <span>{{xtotal roll}}</span>
-    </div>
-    {{/if}}
+<div class="gm-only">
+  <div class="outcome-text">
+    <span class="attack-outcome">{{localize "PB.MysticalMishaps"}}</span>
   </div>
-</div>
 
-{{#each items as |item|}}
-<div class="card-description">{{item.data.text}}</div>
-{{/each}}
+  <div class="test-roll">
+    <div class="attack-roll">
+      {{#if formula}}
+      <div class="roll-title">
+        <span>{{formula}}</span>
+      </div>
+      {{/if}} {{#if roll}}
+      <div class="roll-result">
+        <span>{{xtotal roll}}</span>
+      </div>
+      {{/if}}
+    </div>
+  </div>
+
+  {{#each items as |item|}}
+    <div class="card-description">{{item.data.text}}</div>
+  {{/each}}
+</div>
