Ships added, refactor all ChatMessage Card and some dialog

--- a/scss/pirateborg.scss
+++ b/scss/pirateborg.scss
@@ -4,6 +4,7 @@
 @import "pirateborg/_sheet";
 @import "pirateborg/_actor-sheet";
 @import "pirateborg/_character-sheet";
+@import "pirateborg/_vehicle-sheet";
 @import "pirateborg/_item-list";
 @import "pirateborg/_creature-sheet";
 @import "pirateborg/_item-sheet";
