--- a/templates/actor/creature-sheet.html
+++ b/templates/actor/creature-sheet.html
@@ -18,6 +18,7 @@
       <div class="buttons-row">
         <button type="button" class="roll-button reaction rollable">{{localize "PB.Reaction"}}</button>
         <button type="button" class="roll-button morale rollable">{{localize "PB.Morale"}}</button>
+        <button type="button" class="button item-button initiative-button" title="{{localize 'PB.Initiative'}}">{{localize "PB.Initiative"}}</button>
       </div>
     </div>
   </header>
