--- a/css/pirateborg.css
+++ b/css/pirateborg.css
@@ -516,6 +516,9 @@
   align-items: center;
   gap: 8px;
 }
+.pirateborg.sheet.actor.character .sheet-header .header-col2 .rest-buttons button {
+  width: auto;
+}
 .pirateborg.sheet.actor.character .sheet-header .header-col3 {
   flex: 0 0 120px;
   display: flex;
@@ -526,6 +529,7 @@
   height: 100px;
   width: 100px;
   border-radius: 24px;
+  object-fit: contain;
 }
 .pirateborg.sheet.actor.character .sheet-header .name-row {
   margin-left: -4px;
@@ -589,6 +593,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  gap: 2px;
 }
 .pirateborg.sheet.actor.character .sheet-header .ability-row:last-child {
   margin-bottom: 0;
@@ -612,6 +617,7 @@
   font-weight: 600;
   padding-bottom: 4px;
   border-radius: 4px;
+  text-align: right;
 }
 .pirateborg.sheet.actor.character .sheet-body .powers-top-row {
   margin-bottom: 16px;
@@ -671,6 +677,155 @@
 .pirateborg.sheet.actor.character .sheet-body .encumbered {
   color: var(--highlight-background-color);
   font-weight: 600;
+}
+
+.pirateborg.sheet.actor.vehicle-edit .sheet-header {
+  margin: 16px;
+  display: flex;
+  flex-direction: row;
+  flex: none;
+  align-items: flex-start;
+  gap: 16px;
+}
+.pirateborg.sheet.actor.vehicle-edit .sheet-header .header-col1 {
+  flex: 0 0 64px;
+  margin-right: 8px;
+  line-height: 0;
+}
+.pirateborg.sheet.actor.vehicle-edit .sheet-header .header-col2 {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  height: 100%;
+  justify-content: flex-start;
+}
+.pirateborg.sheet.actor.vehicle-edit .sheet-header .profile-img {
+  height: 64px;
+  width: 64px;
+  border-radius: 24px;
+}
+.pirateborg.sheet.actor.vehicle-edit .sheet-header .name-row {
+  flex: 0 0 45px;
+  width: 100%;
+}
+.pirateborg.sheet.actor.vehicle-edit .sheet-header .holding-row {
+  flex: 0 0 35px;
+}
+.pirateborg.sheet.actor.vehicle-edit .sheet-header .actor-type {
+  margin-bottom: 0;
+}
+.pirateborg.sheet.actor.vehicle {
+  min-width: 560px;
+}
+.pirateborg.sheet.actor.vehicle .tab {
+  border-top: 2px groove var(--light-border-color);
+}
+.pirateborg.sheet.actor.vehicle .actor-name {
+  margin-bottom: 8px;
+}
+.pirateborg.sheet.actor.vehicle .stats-row {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.pirateborg.sheet.actor.vehicle .stats-entries {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.pirateborg.sheet.actor.vehicle .stats-entries input {
+  width: 50px;
+}
+.pirateborg.sheet.actor.vehicle .ship-actions {
+  display: flex;
+  gap: 4px;
+}
+.pirateborg.sheet.actor.vehicle .ship-actions button {
+  min-width: 100px;
+}
+.pirateborg.sheet.actor.vehicle .ship-actions button.icon-button {
+  width: auto;
+  padding: 3px 5px 4px 7px;
+  margin: 0;
+  min-width: 0;
+  color: var(--foreground-color);
+  background: none;
+}
+.pirateborg.sheet.actor.vehicle .item-type-crew-action button {
+  width: 100px;
+}
+.pirateborg.sheet.actor.vehicle .description p {
+  margin: 16px;
+  margin-top: 0;
+  font-style: italic;
+  text-align: center;
+  font-size: 16px;
+  font-family: var(--item-font);
+}
+.pirateborg.sheet.actor.vehicle .special {
+  margin: 8px;
+  margin-top: 0;
+  font-style: italic;
+  text-align: center;
+  font-size: 14px;
+  font-family: var(--item-font);
+}
+.pirateborg.sheet.actor.vehicle .item-hull {
+  margin-right: 8px;
+  flex: 0;
+}
+.pirateborg.sheet.actor.vehicle .item-ship-damage {
+  flex: 0 0 100px;
+  text-align: right;
+}
+.pirateborg.sheet.actor.vehicle .item-warning {
+  text-align: center;
+  font-style: italic;
+}
+.pirateborg.sheet.actor.vehicle .item-name {
+  align-items: center;
+}
+.pirateborg.sheet.actor.vehicle .item-name-extra {
+  text-align: right;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  flex: 1;
+}
+.pirateborg.sheet.actor.vehicle .item-name-extra .stat-input {
+  height: 24px;
+}
+.pirateborg.sheet.actor.vehicle .item-controls .item-toggle.is-captain {
+  color: var(--highlight-background-color);
+}
+.pirateborg.sheet.actor.vehicle .warning {
+  color: var(--highlight-background-color);
+}
+.pirateborg.sheet.actor.vehicle .items-header-quantity {
+  font-family: var(--item-font);
+  font-size: 16px;
+  margin-left: 8px;
+}
+.pirateborg.sheet.actor.vehicle .ship-combat-row {
+  display: flex;
+  gap: 8px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 16px;
+  margin-right: 8px;
+}
+.pirateborg.sheet.actor.vehicle .ship-combat-row .ship-hull {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+.pirateborg.sheet.actor.vehicle .ship-combat-row .ship-hull .ship-hull-label {
+  font-family: var(--h2-font);
+  font-size: 20px;
+  text-transform: capitalize;
+  margin: 0;
 }
 
 .pirateborg .items-list .items-header {
@@ -733,15 +888,15 @@
   flex: 2;
 }
 .pirateborg .item-list .item-buttons {
-  align-items: right;
+  align-items: center;
   display: flex;
-  flex: 0 0 102px;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  flex: 0 0 0;
+  flex-wrap: nowrap;
+  justify-content: center;
+  gap: 4px;
 }
 .pirateborg .item-list .item-buttons button {
-  width: 100%;
+  min-width: 100px;
 }
 .pirateborg .item-list .item-controls {
   flex: 0 0 60px;
@@ -924,6 +1079,7 @@ form button {
   padding-top: 1px;
   cursor: pointer;
   height: 28px;
+  white-space: nowrap;
 }
 form button:hover {
   box-shadow: 0 0 10px var(--highlight-background-color);
@@ -1353,11 +1509,13 @@ form .form-group-stacked {
   border-bottom: 2px groove var(--light-border-color);
 }
 .sidebar-tab.directory .directory-list .subdirectory {
-  padding-left: 16px;
   border: none;
 }
 .sidebar-tab.directory .directory-list .subdirectory .directory-item:last-child {
   border: none;
+}
+.sidebar-tab.directory .directory-list .subdirectory li {
+  padding-left: 16px;
 }
 .sidebar-tab.directory .directory-list .directory-item {
   border-bottom: 2px groove var(--light-border-color);
@@ -1377,6 +1535,13 @@ form .form-group-stacked {
 
 #scenes .scene h3 {
   color: var(--foreground-alt-color);
+}
+#scenes .subdirectory {
+  border: none;
+  padding: 0;
+}
+#scenes .subdirectory .scene {
+  margin: 8px;
 }
 
 .compendium.directory .directory-list .directory-item {
@@ -1535,6 +1700,16 @@ hr {
 .roll-card .card-description p:first-of-type {
   margin: 0;
 }
+.roll-card .card-outcome-description {
+  font-family: var(--chat-font);
+  font-size: 16px;
+  text-align: center;
+  margin: 24px 0 0 0;
+  font-style: italic;
+}
+.roll-card .card-outcome-description p:first-of-type {
+  margin: 0;
+}
 .roll-card .roll-result {
   font-family: var(--chat-font);
   font-size: 18px;
@@ -1621,7 +1796,6 @@ hr {
 /* Rest and Scvm Dialogs */
 /* ====================== */
 .custom-dialog {
-  border: 2px groove var(--light-border-color);
   font-size: 14px;
   margin: 0;
 }
@@ -1653,7 +1827,7 @@ hr {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  margin: 8px;
+  margin: 16px 8px 0 8px;
   gap: 8px;
 }
 .custom-dialog .button-row button {
