--- a/scss/pirateborg/_character-sheet.scss
+++ b/scss/pirateborg/_character-sheet.scss
@@ -22,6 +22,10 @@
             display: flex;
             align-items: center;
             gap: 8px;
+
+            button {
+              width: auto;
+            }
           }
         }
 
@@ -36,6 +40,7 @@
           height: 100px;
           width: 100px;
           border-radius: 24px;
+          object-fit: contain;
         }
 
         .name-row {
@@ -117,7 +122,7 @@
           display: flex;
           flex-direction: row;
           align-items: center;
-
+          gap: 2px;
           &:last-child {
             margin-bottom: 0;
           }
@@ -143,6 +148,7 @@
           font-weight: 600;
           padding-bottom: 4px;
           border-radius: 4px;
+          text-align: right;
         }
       }
 
