--- a/scss/pirateborg/_dialog.scss
+++ b/scss/pirateborg/_dialog.scss
@@ -35,7 +35,6 @@
 /* ====================== */
 
 .custom-dialog {
-  border: 2px groove var(--light-border-color);
   font-size: 14px;
   margin: 0;
 
@@ -77,7 +76,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin: 8px;
+    margin: 16px 8px 0 8px;
     gap: 8px;
 
     button {
