--- a/templates/item/background-sheet.html
+++ b/templates/item/background-sheet.html
@@ -6,6 +6,9 @@
       <h1 class="item-name">
         <input name="name" type="text" value="{{item.name}}" placeholder="{{localize 'PB.ItemName'}}" />
       </h1>
+      <div class="item-subtitle">
+        <h4 class="item-type">{{item.type}}</h4>
+      </div>
     </div>
   </header>
 
