--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -179,6 +179,13 @@
               </button>
             </div>
             <div class="item-controls">
+              {{#if item.data.needsReloading}}
+              <a
+                class="item-control item-reload {{ifPrint item.data.loadingCount 'loading'}}"
+                title="{{ifPrintElse item.data.reloadTime (localize 'PB.ReloadStatus' current=item.data.loadingCount max=item.data.reloadTime) (localize 'PB.Reload')}}"
+                ><i class="fas fa-bullseye"></i
+              ></a>
+              {{/if}}
               <a
                 class="item-control item-toggle item-toggle-equipped {{ifPrint item.data.equipped 'equipped'}}"
                 title="{{ifPrintElse item.data.equipped (localize 'PB.ItemEquipped') (localize 'PB.ItemUnequipped')}}"
