--- a/scss/pirateborg/_dialog.scss
+++ b/scss/pirateborg/_dialog.scss
@@ -47,6 +47,11 @@
     font-size: 22px;
   }
 
+  .description {
+    font-family: var(--chat-font);
+    font-size: 16px;
+  }
+
   ul {
     list-style-type: none;
   }
