--- a/templates/chat/wield-damage.html
+++ b/templates/chat/wield-damage.html
@@ -3,22 +3,23 @@
     <span class="take-damage">{{damageOutcome}}</span>
   </div>
   {{#if damageRoll}}
-  <div class="damage-roll">
-    <div class="roll-title">
-      <span>{{localize "PB.Damage"}}: {{damageRoll._formula}}</span>
+    <div class="damage-roll">
+      <div class="roll-title">
+        <span>{{localize "PB.Damage"}}: {{damageRoll._formula}}</span>
+      </div>
+      <div class="roll-result">
+        <span>{{xtotal damageRoll}}</span>
+      </div>
     </div>
-    <div class="roll-result">
-      <span>{{xtotal damageRoll}}</span>
+  {{/if}}
+  {{#if armorRoll}}
+    <div class="target-armor-roll">
+      <div class="roll-title">
+        <span>{{localize "PB.TargetArmor"}}: {{armorRoll._formula}}</span>
+      </div>
+      <div class="roll-result">
+        <span>{{xtotal armorRoll}}</span>
+      </div>
     </div>
-  </div>
-  {{/if}} {{#if armorRoll}}
-  <div class="target-armor-roll">
-    <div class="roll-title">
-      <span>{{localize "PB.TargetArmor"}}: {{armorRoll._formula}}</span>
-    </div>
-    <div class="roll-result">
-      <span>{{xtotal armorRoll}}</span>
-    </div>
-  </div>
   {{/if}}
 </div>
