--- a/templates/actor/common/dynamic-list.html
+++ b/templates/actor/common/dynamic-list.html
@@ -1,27 +1,80 @@
-{{#*inline "static-list-item"}} {{#> "systems/pirateborg/templates/actor/common/static-list-item.html" }} {{> @partial-block }}
-{{/"systems/pirateborg/templates/actor/common/static-list-item.html"}} {{/inline}} {{#*inline "static-list"}} {{#>
-"systems/pirateborg/templates/actor/common/static-list.html" }} {{> @partial-block }} {{/"systems/pirateborg/templates/actor/common/static-list.html"}}
-{{/inline}} {{#*inline "basic-item"}} {{#> static-list-item type=item.type class=class id=item._id}}
-<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 
-<h4 class="item-name item-edit rollable">{{item.name}}</h4>
+{{#*inline "static-list-item"}}
+  {{#> "systems/pirateborg/templates/actor/common/static-list-item.html" }}
+    {{> @partial-block }}
+  {{/"systems/pirateborg/templates/actor/common/static-list-item.html"}}
+{{/inline}} 
 
-{{#if has-button}}
-<div class="item-buttons">{{#> buttons}}{{/buttons}}</div>
+{{#*inline "static-list"}}
+  {{#> "systems/pirateborg/templates/actor/common/static-list.html" }}
+    {{> @partial-block }}
+  {{/"systems/pirateborg/templates/actor/common/static-list.html"}}
+{{/inline}} 
+
+{{#*inline "basic-item"}}
+  {{#> static-list-item type=item.type class=class id=item._id}}
+    <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+
+    <h4 class="item-name item-edit rollable">
+      {{item.name}} 
+    </h4>
+
+    {{#if has-button}}
+      <div class="item-buttons">
+        {{#> buttons}}{{/buttons}}
+      </div>
+    {{/if}}
+
+    <div class="item-controls">
+      {{#> item-controls}}{{/item-controls}}
+      {{#ifNe noDeleteButton true }}
+        <a class="item-control item-delete" title="Delete Item"> <i class="fas fa-trash"></i></a>
+      {{/ifNe}}
+    </div>
+  {{/static-list-item}}
+{{/inline}} 
+
+{{#*inline "mysticShanty"}}
+  {{#*inline "buttons"}}
+    <button type="button" class="item-button rollable action-shanties" title="PC Action">
+      {{localize "PB.ShipShantyButton"}}
+    </button>
+  {{/inline}}
+  {{> basic-item has-button=true}}
+{{/inline}} 
+
+{{#*inline "cargo"}}
+  {{> basic-item}}
+{{/inline}} 
+
+{{#*inline "crew"}}
+  {{#*inline "item-controls"}}
+    <a class="item-control item-toggle item-crew-captain {{#if item.data.isCaptain}}is-captain{{/if}}" title="Captain"> <i class="fas fa-skull-crossbones"></i></a>
+    <a class="item-control item-remove-crew" title="Remove Crew"> <i class="fas fa-trash"></i></a>
+  {{/inline}}
+  {{> basic-item noDeleteButton=true}}
+{{/inline}} 
+
+{{#*inline "list"}}
+  {{#> static-list label=label create=create type=type}}    
+    {{#each items as |item id|}}
+      {{#> (lookup .. 'type') item=item }} 
+        {{> basic-item item=item has-button=true}} 
+      {{/undefined}}
+    {{else}}
+      {{#if emptyMessage}}
+        {{#> static-list-item class="empty-container"}}
+          <div class="rule-text you-have-no">{{localize emptyMessage}}</div>  
+        {{/static-list-item}}
+      {{/if}}
+    {{/each}}
+  {{/static-list}}
+{{/inline}} 
+
+{{#if items}}
+  {{> list }} 
+{{else}}
+  {{#if emptyMessage}}
+    {{> list }} 
+  {{/if}}
 {{/if}}
-
-<div class="item-controls">
-  {{#> item-controls}}{{/item-controls}} {{#ifNe noDeleteButton true }}
-  <a class="item-control item-delete" title="Delete Item"> <i class="fas fa-trash"></i></a>
-  {{/ifNe}}
-</div>
-{{/static-list-item}} {{/inline}} {{#*inline "mysticShanty"}} {{#*inline "buttons"}}
-<button type="button" class="item-button rollable action-shanties" title="PC Action">{{localize "PB.ShipShantyButton"}}</button>
-{{/inline}} {{> basic-item has-button=true}} {{/inline}} {{#*inline "cargo"}} {{> basic-item}} {{/inline}} {{#*inline "crew"}} {{#*inline "item-controls"}}
-<a class="item-control item-toggle item-crew-captain {{#if item.data.isCaptain}}is-captain{{/if}}" title="Captain"> <i class="fas fa-skull-crossbones"></i></a>
-<a class="item-control item-remove-crew" title="Remove Crew"> <i class="fas fa-trash"></i></a>
-{{/inline}} {{> basic-item noDeleteButton=true}} {{/inline}} {{#*inline "list"}} {{#> static-list label=label create=create type=type}} {{#each items as |item
-id|}} {{#> (lookup .. 'type') item=item }} {{> basic-item item=item has-button=true}} {{/undefined}} {{else}} {{#if emptyMessage}} {{#> static-list-item
-class="empty-container"}}
-<div class="rule-text you-have-no">{{localize emptyMessage}}</div>
-{{/static-list-item}} {{/if}} {{/each}} {{/static-list}} {{/inline}} {{#if items}} {{> list }} {{else}} {{#if emptyMessage}} {{> list }} {{/if}} {{/if}}
