--- a/templates/dialog/allowed-character-generator-classes-dialog.html
+++ b/templates/dialog/allowed-character-generator-classes-dialog.html
@@ -1,6 +1,6 @@
-<form id="allowed-scvm-classes-form" class="custom-dialog allowed-scvm-classes-dialog">
+<form id="allowed-character-generator-classes-form" class="custom-dialog allowed-character-generator-classes-dialog">
   <div class="section">
-    <div class="subtitle">{{localize "PB.AllowedScvmClassesSelect"}}</div>
+    <div class="subtitle">{{localize "PB.AllowedCharacterGeneratorClassesSelect"}}</div>
     <ul>
       {{#each classes as |class|}}
       <li>
@@ -11,7 +11,7 @@
       </li>
       {{/each}}
     </ul>
-    <div><a class="toggle-none">{{localize "PB.ScvmfactoryToggleNone"}}</a>&nbsp; / &nbsp;<a class="toggle-all">{{localize "PB.ScvmfactoryToggleAll"}}</a></div>
+    <div><a class="toggle-none">{{localize "PB.CharacterGeneratorToggleNone"}}</a>&nbsp; / &nbsp;<a class="toggle-all">{{localize "PB.CharacterGeneratorToggleAll"}}</a></div>
   </div>
   <div class="button-row">
     <button type="submit" class="button cancel-button" name="cancel" value="1">{{localize "PB.Cancel"}}</button>
