Remove all unused translation key, all keys are sorted and install eslint-plugin-i18n-json

--- a/templates/actor/common/static-list.html
+++ b/templates/actor/common/static-list.html
@@ -1,5 +1,5 @@
 <ol class="items-list equipment-list">
-  <li class="items-header flexrow"
+  <li class="items-header flexrow">
 
     <h4 class="item-name flexrow">{{localize label}} <span class="items-header-quantity">{{#if maxQuantity}}({{currentQuantity}}/{{maxQuantity}}){{/if}}</span></h4>
     {{#if create}}
@@ -14,5 +14,4 @@
   <ol class="item-list">
     {{> @partial-block }}
   </ol>
-</ol>  </ol>
 </ol>
