--- a/templates/item/misc-sheet.html
+++ b/templates/item/misc-sheet.html
@@ -55,13 +55,13 @@
 
       {{! Action Macro }}
       <div class="form-group">
-        <label>{{localize "PB.actionMacro"}}:</label>
+        <label>{{localize "PB.ActionMacro"}}:</label>
         <input type="text" name="data.actionMacro" value="{{data.data.actionMacro}}" placeholder="compendium;macro" data-dtype="String" />
       </div>
 
       {{! Action Macro Label }}
       <div class="form-group">
-        <label>{{localize "PB.actionMacroLabel"}}:</label>
+        <label>{{localize "PB.ActionMacroLabel"}}:</label>
         <input type="text" name="data.actionMacroLabel" value="{{data.data.actionMacroLabel}}" placeholder="Use" data-dtype="String" />
       </div>
     </div>
