--- a/templates/actor/vehicle-sheet.html
+++ b/templates/actor/vehicle-sheet.html
@@ -230,7 +230,7 @@
       {{> dynamic-list items=data.data.features type="feature" label="PB.ShipFeatures"}}
 
       <ol class="items-list equipment-list">
-        {{> "systems/pirateborg/templates/actor/common/actor-equipment-list.html"}}
+        {{> "systems/pirateborg/templates/actor/common/actor-equipment-list.html" sectionTitle=(localize "PB.Storage")}}
       </ol>
       
     </div>
