--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -253,7 +253,7 @@
               <a
                 class="item-control item-toggle item-toggle-equipped {{ifPrint data.data.equippedArmor.data.equipped 'equipped'}}"
                 title="{{ifPrintElse data.data.equippedArmor.data.equipped (localize 'PB.ItemEquipped') (localize 'PB.ItemUnequipped')}}"
-                ><i class="fas fa-fist-raisedfa-raised"></i
+                ><i class="fas fa-fist-raised"></i
               ></a>
               <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
             </div>
